
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint32 ;
typedef int * STREAM ;


 int SEC_ENCRYPT ;
 int SEC_LICENCE_NEG ;
 scalar_t__ encryption ;
 int in_uint32_le (int *,int) ;
 int in_uint8s (int *,int) ;
 int licence_issued ;
 int licence_process (int *) ;
 int * mcs_recv () ;

STREAM
sec_recv(void)
{
 uint32 sec_flags;
 STREAM s;

 while ((s = mcs_recv()) != ((void*)0))
 {
  if (encryption || !licence_issued)
  {
   in_uint32_le(s, sec_flags);

   if (sec_flags & SEC_LICENCE_NEG)
   {
    licence_process(s);
    continue;
   }

   if (sec_flags & SEC_ENCRYPT)
   {
    in_uint8s(s, 8);

   }
  }

  return s;
 }

 return ((void*)0);
}
